--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,2 +1,2 @@
-
+body{background:#222}#player1{width:100px;height:100px;border:3px solid #A00000;border-radius:50%;background:rgba(160,0,0,0.4);margin:auto;top:0;left:0;right:0;bottom:0;position:absolute}
 /*# sourceMappingURL=app.css.map */
